--- a/frontend/src/pages/bookingDetail.css
+++ b/frontend/src/pages/bookingDetail.css
@@ -1,10 +1,15 @@
-.contain{
-    /* display:flex; */
-}
-.imgs-container{
-    width: 95%;
-    margin: 0 auto;
 
+.imgs-container{
+    width: 94vw;
+    margin: 0 auto;
+}
+.contain{
+    position: relative;
+    display:block;
+    justify-content: center;
+    gap: 60px;
+    width: 95vw;
+    margin: 0 auto;
 }
 .detail-img {
     height:47vw;
@@ -13,31 +18,79 @@
     background-position: center;
     background-size: cover;
 }
-.datail-container{
-    margin-top: 2rem;
-    padding: 2rem;
-    width: 700px;
+.detail-activity{
+    margin-bottom: 2rem;
+    display: flex;
+    gap: 4rem;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
 }
-.datail-container h1{
-    margin-bottom: 1rem;
-    text-decoration: underline;
-    text-transform: uppercase;
-}
-.datail-container h3{
+.detail-container, 
+.contain .all-activities{
+    margin-top: 1rem;
+    width: 45vw;
     text-align: justify;
 }
-
+.contain h1{
+    margin-top: 2rem;
+    text-decoration: underline;
+}
+.detail-container h3{
+    text-align: justify;
+}
 .details-list li:not(:last-child){
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
 }
 .details-list .label,
 .details-list .value{
 font-size: 20px;
 }
-.datail-container P{
+.detail-container P{
 font-size: 20px;
 margin-bottom: 1rem;
+/* text-align: justify; */
+}
+.detail-container .details-list{
+width: 40vw;
 }
 .detail-btn {
 padding-left: 2em;
+}
+.map-container{
+    position: relative;
+    width: 100%;
+    height: 350px;
+    /* border: red solid; */
+}
+.map{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    /* left: 5vw; */
+}
+@media screen and (max-width: 1000px) {
+.detail-activity{
+    margin-bottom: 2rem;
+    display: block;
+}
+.detail-container .details-list{
+width: 90vw;
+}
+.detail-container, 
+.contain .all-activities{
+    margin-top: 1rem;
+    width: 100%;
+    text-align: justify;
+}
+}
+@media screen and (max-width: 500px) {
+    .imgs-container{
+    width: 80vw;
+    margin: 0 auto;
+}
+.map-container{
+    height: 250px;
+}
 }
