--- a/frontend/src/pages/bookingForm.css
+++ b/frontend/src/pages/bookingForm.css
@@ -7,7 +7,7 @@
     }
 }
 .booking-form{
-    height: 60vh;
+    height: 90vh;
 }
 .form-input input, textarea{
     width: 30rem;
@@ -16,7 +16,7 @@
 .trip-title{
     margin-bottom: 1rem;
     margin-top: 10rem;
-    width: 30vw;
+    width: 70vw;
     text-align: center;
     text-transform: capitalize;
 }
@@ -25,7 +25,7 @@
     margin-bottom: 10rem;
 }
 #request {
-    width: 30rem;
+    /* width: 30rem; */
     height: 100px;
 }
 .rotate{
@@ -38,4 +38,22 @@
     border-radius: 50%;
     color: red;
     overflow: auto;
+}
+@media screen and (max-width: 1000px) {
+.form-input input, textarea, .reserve{
+    width: 25rem;
+    padding: 0.5rem;
+}
+}
+@media screen and (max-width: 500px) {
+.form-input input, textarea, .reserve{
+    width: 20rem;
+    padding: 0.5rem;
+}
+}
+@media screen and (max-width: 350px) {
+.form-input input, textarea, .reserve{
+    width: 15rem;
+    padding: 0.5rem;
+}
 }
