--- a/frontend/src/pages/landing.css
+++ b/frontend/src/pages/landing.css
@@ -131,18 +131,22 @@ width: 140px;
 padding: 10px;
 font-size: 18px;
 }
+.nxt{
+  width: 95vw;
+  margin: 0 auto;
+}
 .nxt-dest{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 2rem;
+  row-gap: 2rem;
   animation: nxt-dest 1s ease-in;
 }
 .dest-container{
- box-shadow: rgb(38, 57, 77) 0px 20px 30px -15px;
- background-color:rgb(237, 230, 220);
- background-color:rgb(241, 236, 230);
- background: #f3f1f2;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -15px;
+  background-color:rgb(237, 230, 220);
+  background-color:rgb(241, 236, 230);
+  background: #f3f1f2;
 }
 .dest{
   display: flex;
@@ -218,8 +222,12 @@ margin-bottom: 0.5rem;
   color: goldenrod;
 }
 
-
-@media screen and (max-width: 990px ) {
+@media screen and (min-width: 1600px ){
+  .nxt{
+    width: 7ovw;
+  }
+}
+@media screen and (max-width: 1000px ) {
   .article-img {
     display: flex;
     flex-direction: column-reverse;
@@ -280,8 +288,20 @@ padding: 5px;
 .places{
   width: 90%;
 }
+.nxt .title-container p{
+  width: 70vw;
+  margin: 0 auto;
+  text-align: center;
 }
-@media screen and (min-width: 990px){
+.nxt-dest{
+  display: grid;
+  grid-template-columns: 1fr;
+}
+.nxt{
+  width: 70vw;
+}
+}
+@media screen and (min-width: 1000px){
 .review-btn button{
   padding: 2px;
   }
@@ -299,13 +319,26 @@ padding: 5px;
 }
   .places-card {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   column-gap: 10px;
   row-gap: 35px;
 }
-
+.places{
+  position: relative;
+  width: 100%;
+  height: 500px;
+  background-color:#ADADAD;
+  margin: 0 auto;
 }
-@media screen and (max-width: 600px ) {
+.places img{
+  width: 100%;
+  height: 75%;
+  object-fit: cover;
+  margin-top: 1rem;
+  cursor: pointer;
+}
+}
+@media screen and (max-width: 750px ) {
   .places-card {
   display: grid;
   grid-template-columns: 1fr;
@@ -313,13 +346,27 @@ padding: 5px;
   row-gap: 35px;
 }
 .places{
-  width: 80%;
+  width: 70%;
 }
 .more,
 .less{
 width: 120px;
 padding: 5px;
 font-size: 16px;
+}
+.nxt{
+  width: 95vw;
+}
+}
+@media screen and (max-width: 500px ){
+  .places{
+  width: 90%;
+}
+}
+@media screen and (max-width: 400px ){
+.places{
+  width: 100%;
+  height:fit-content;
 }
 }
 
