--- a/frontend/src/pages/bookingDetail.css
+++ b/frontend/src/pages/bookingDetail.css
@@ -16,7 +16,7 @@
     margin: 0 auto;
 }
 .detail-img {
-    height: 40vw;
+    height: 44vw;
     width: 100%;
     background-repeat: no-repeat;
     background-position: center;
@@ -82,6 +82,12 @@ width: 40vw;
 .detail-btn {
 padding-left: 2vw;
 }
+.itinerary-container{
+    /* margin-left: 15px; */
+    margin-left: 1vw;
+}
+.itinerary-title{
+}
 .map-container{
     margin-top: 2vw;
     position: relative;
@@ -110,7 +116,8 @@ padding-left: 2vw;
 }
 .detail-container P, 
 .details-list .label,
-.details-list .value{
+.details-list .value,
+.details-list .itinerary{
     font-size: 1.6vw !important;
 }
 }
@@ -145,7 +152,8 @@ margin-bottom: 80px;
 }
 .detail-container P, 
 .details-list .label,
-.details-list .value{
+.details-list .value,
+.details-list .itinerary{
 font-size: 22px;
 }
 .details-list li:not(:last-child){
@@ -169,7 +177,7 @@ font-size: 22px;
 .contain .all-activities{
     margin-top: 1rem;
     width: 100% ;
-    text-align: justify;
+    text-align: left;
 }
 .detail-container .details-list{
 width: 70vw;
@@ -195,6 +203,9 @@ padding-left: 38px;
 .imgs-container{
     width: 90vw ;
 }
+.detail-container .details-list{
+width: 90vw;
+}
 }
 
 @media screen and (max-width: 500px) {
@@ -219,7 +230,8 @@ padding-left: 38px;
 }
 .detail-container P, 
 .details-list .label,
-.details-list .value{
+.details-list .value,
+.details-list .itinerary{
 font-size: 1rem;
 }
 }
