--- a/frontend/src/components/forms/bookingForm.css
+++ b/frontend/src/components/forms/bookingForm.css
@@ -36,6 +36,10 @@
     width: 30rem;
     padding: 0.5rem;
 }
+.date-option select{
+ font-size: 16px;
+ /* border: red solid; */
+}
 
 @media(min-width: 1200px){
 .form-section .form-group label{
@@ -50,9 +54,18 @@
     width: 30rem;
     height: 8vw !important;
 }
+.date-option select{
+ font-size: 1.3vw;
+ /* border: red solid; */
+}
 }
 @media (min-width: 1600px){
 .form-container {
     max-width: 600px;
+}
+}
+@media (max-width: 500px){
+.date-option select{
+    font-size: 14px;
 }
 }
