--- a/frontend/src/pages/landing.css
+++ b/frontend/src/pages/landing.css
@@ -114,7 +114,8 @@ button:hover{
   position: relative;
   width: 100%;
   height: 340px;
-  background-color:#ADADAD;
+  background-color: #ffffff;
+  box-shadow: 0px 16px 48px 0px rgba(0, 0, 0, 0.176);
   margin: 0 auto;
   padding-bottom: 2vw;
 }
@@ -308,7 +309,6 @@ button{
 }
 .places{
   height: 30vw;
-  background-color:#c8c7c7;
   margin: 0 auto;
   padding-bottom: 1vw;
 }
@@ -501,7 +501,9 @@ margin-top: 10px;
 .places{
   width: 75%;
   border-radius: 10px;
-  height: 340px;
+  height: fit-content;
+  background-color: #ffffff;
+  box-shadow: 0px 16px 48px 0px rgba(0, 0, 0, 0.176);
 }
 .more,
 .less{
